clusters/talos-cluster/dia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dia
  labels:
    name: dia
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
